# Ariac2023-Kitting

./: README.md
final_group14 /: package.xml  setup.cfg  setup.py
final_group14 /config/: params.yaml
final_group14 /final_group14/: comp_test.py  locate_part.py  locate_tray.py  read_orders.py  read_test.py  start_comp.py  sub_test.py
final_group14 /instructions/: intsructions.md
final_group14 /launch/: comp_launch.py  storing_order_launch.py  test_launch.py
